# certcheck

./: LICENSE  README.md  build.ps1  certcheck.cmd  certcheck.py  certcheck.spec  certcheck_gui.py  certcheck_gui.spec  pyproject.toml
tests/: test_certcheck.py  test_gui.py
