[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "certcheck"
version = "1.0.0"
description = "Tiny, dependency-light TLS certificate expiry checker"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Milling78" }]
keywords = ["tls", "ssl", "certificate", "expiry", "monitoring"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Monitoring",
    "Topic :: Security",
]
dependencies = ["cryptography>=42.0"]

[project.optional-dependencies]
gui = ["openpyxl>=3.1"]   # Excel export; Tkinter ships with Python

[project.urls]
Homepage = "https://github.com/Milling78/certcheck"

[project.scripts]
certcheck = "certcheck:main"

[project.gui-scripts]
certcheck-gui = "certcheck_gui:main"

[tool.setuptools]
py-modules = ["certcheck", "certcheck_gui"]
